log
Sat, May  3, 2025 10:51:53 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:40:55: error: expected ',' or ';' before ':' token
     TreeMap* new = (TreeMap*) malloc(sizeof(TreeMap)) :
                                                       ^
5729e4d
Sat, May  3, 2025 10:52:02 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a9901d1
Sat, May  3, 2025 11:04:26 PM: 
 treemap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:21: error: too many arguments to function 'createTreeMap'
     TreeNode* new = createTreeMap(key, value) ;
                     ^~~~~~~~~~~~~
treemap.c:39:11: note: declared here
 TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
           ^~~~~~~~~~~~~
treemap.c:55:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeNode* new = createTreeMap(key, value) ;
                     ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
cd86e5a
Sat, May  3, 2025 11:04:36 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
8c48df6
Sat, May  3, 2025 11:05:38 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|7
total_score: 5/70
2b7a8aa
Sat, May  3, 2025 11:13:19 PM: 
 treemap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  3|7
total_score: 5/70
cee441e
Sat, May  3, 2025 11:13:46 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|6
total_score: 5/70
771fcc5
Sat, May  3, 2025 11:15:56 PM: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  5|6
total_score: 5/70
447e7bc
